--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -196,7 +196,7 @@
     function update() {
         fetch();
         if (continueUpdates)
-            setTimeout(update, 10000);
+            setTimeout(update, 3000);
     }
 
     update();
@@ -220,7 +220,7 @@
         today.setSeconds(0);
         today.setMilliseconds(0);
         var timestamp = today.valueOf();
-        var dateurl = "http://localhost:29998/services/LogCount/TotalsForMinute/" + timestamp + "/";
+        var dateurl = "http://localhost:8080/LearnJersey/services/LogCount/TotalsForMinute/" + timestamp + "/";
         return dateurl;
     }
 
@@ -276,7 +276,7 @@
         var series = [];
         var keys = [];
         for (key in alreadyFetched) {
-            key.push(key);
+            keys.push(key);
         }
         for (var i = 0; i < keys.length; i++) {
             var newValues = [];
