--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -172,7 +172,8 @@
                 .clipEdge(true);
 
         chart.xAxis
-                .tickFormat(function(d) { return d3.time.format('%X')(new Date(d)) })
+                  .tickFormat(function(d) { return d3.time.format('%X')(new Date(d)) })
+//                .tickFormat(function(d) { return timestamp2time(d) })
                 .axisLabel('Time')
                 .showMaxMin(false);
 
@@ -221,9 +222,25 @@
         var timestamp = Math.floor(Date.now() / 1000);
 //        console.log("timestamp: " + timestamp);
         var dateurl = "http://localhost:8080/LearnJersey/services/LogCount/TotalsForMinute/" + timestamp + "/";
+        console.log("time: " + timestamp2time(timestamp));
         return dateurl;
     }
 
+    function timestamp2time(unix_timestamp) {
+    	// Create a new JavaScript Date object based on the timestamp
+    	// multiplied by 1000 so that the argument is in milliseconds, not seconds.
+    	var date = new Date(unix_timestamp*1000);
+    	// Hours part from the timestamp
+    	var hours = date.getHours();
+    	// Minutes part from the timestamp
+    	var minutes = "0" + date.getMinutes();
+    	// Seconds part from the timestamp
+    	var seconds = "0" + date.getSeconds();
+
+    	// Will display time in 10:30:23 format
+    	var formattedTime = hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+    	return formattedTime;
+    }
     function fetch() {
         var dataurl = getUrl();
 
